--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -1,15 +1,35 @@
 {
-  "APP_NAME": "MifosX",
-  "About": "About",
-  "Home": "Home",
-  "Logged in as": "Logged in as",
-  "Login": "Login",
-  "Logout": "Logout",
-  "Password": "Password",
-  "Password is required": "Password is required",
-  "Username": "Username",
-  "Username is required": "Username is required",
-  "Username or password incorrect.": "Username or password incorrect",
-  "Remember me": "Remember me",
-  "Version": "Version"
+  "----Footer component----": "----Login component----",
+  "Footer_component": {
+    "Version": "Version",
+    "Midas is up to date": "Footer_component: Midas is up to date"
+  },
+  "----End Footer component----": "----End Footer component----",
+  "----Login component----": "----Login component----",
+  "Login_Component": {
+    "APP_NAME": "Midas - En",
+    "APP_SLOGAN": "This is a Single Page Web that can help your Business grow",
+    "loginForm": {
+      "About": "About",
+      "Home": "Home",
+      "Logged in as": "Logged in as",
+      "Login": "Login",
+      "Logout": "Logout",
+      "Password": "Password",
+      "Password is required": "Password is required",
+      "Confirm Password": "Confirm Password",
+      "Confirm Password is required": "Confirm Password is required",
+      "Username": "Username",
+      "Username is required": "Username is required",
+      "Username or password incorrect.": "Username or password incorrect",
+      "Passwords do not match": "Passwords do not match",
+      "Reset Password": "Reset Password",
+      "Remember me": "Remember me",
+      "Forgot Password": "Forgot Password"
+    }
+  },
+  "----End Login component----": "---- End Login component----",
+  "Client_Component":{
+    "Import_Client":"Import Client"
+  }
 }
