--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -63,7 +63,7 @@
 			"Reset Password": "Reset Password"
 		}
 	},
-	"Home_Component":"Home_Component"{
-		"welcome":"Welcome, {{ username }}"
+	"Home_Component":{
+		"welcome":"Hello, {{ username }}"
 	}
 }
