--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -63,7 +63,7 @@
 			"Reset Password": "Reset lại mật khẩu"
 		}
 	},
-	"Home_Component":"Home_Component"{
+	"Home_Component":{
 		"welcome":"Xin chào, {{ username }}"
 	}
 }
