fix language error
hardcode locale and dateFormat for API calling
   - locale: 'en'
   - dateFormat: 'dd MMMM yyyy'

--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -37,7 +37,7 @@
     "Uptodate": "Midas đã được cập nhật"
   },
   "Home_Component": {
-    "welcome": "Xin chào,  {username}",
+    "welcome": "Xin chào,  ",
     "searchActivity": "Tìm kiếm các hành động"
   },
   "Login_Component": {
