translate client page

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -3,20 +3,64 @@
   "Client_Component": {
     "ClientStepper": {
       "AddressStep": {
-        "Add": "Add",
-        "Address": "Address",
-        "AddressLine1": "AddressLine1",
-        "AddressLine2": "AddressLine2",
-        "AddressLine3": "AddressLine3",
-        "City": "City",
-        "Country": "Country",
-        "Next": "Next",
-        "PostalCode": "PostalCode",
-        "Previous": "Previous",
-        "StateProvince": "StateProvince",
-        "Street": "Street",
-        "TownVilage": "TownVilage",
-        "isActive": "isActive"
+        "buttonAdd": "Add new address",
+        "titleAddress": "Address",
+        "labelAddressLine1": "Address Number",
+        "labelAddressLine2": "Block Number",
+        "labelAddressLine3": "Residential/ Apartment Name",
+        "labelCity": "City",
+        "labelCountry": "Country",
+        "checkboxIsActive": "Activate ?",
+        "labelPostalCode": "Postal Code",
+        "labelStateProvince": "State/Province",
+        "labelStreet": "Street",
+        "labelAddressType": "Address Type",
+        "labelDistrict": "District",
+        "labelTownVillage": "Town/Vilage"
+      },
+      "labelGeneral": "General",
+      "labelAddress": "Address",
+      "labelRelative": "Relative",
+      "labelPreview": "Preview",
+      "buttonNext": "Next",
+      "buttonPrevious": "Previous",
+      "GeneralStep": {
+        "labelOffice": "Office",
+        "labelOfficeMsg": " Office is <strong>required</strong>",
+        "labelStaff": "Staff Owner",
+        "labelLegalForm": "Legal Form",
+        "labelFullName": "Full Name",
+        "labelFullNameMsg": "Client name is <strong>required</strong>",
+        "labelFullNameMsgSpecialChar": " Client name <strong>cannot</strong> begin with a special character or number",
+        "labelFirstName": "First Name",
+        "labelFirstNameMsg": "Client first name is <strong>required</strong>",
+        "labelFirstNameMsgSpecialChar": "Client first name <strong>cannot</strong> begin with a special character or number",
+        "labelMidName": "Middle Name",
+        "labelLastName": "Last name",
+        "labelMidNameMsg": "Middle name is <strong>required</strong>",
+        "labelMidNameMsgSpecialChar": "Client middel name <strong>cannot</strong> begin with a special character or number",
+        "labelLastNameMsg": "Client last name is <strong>required</strong>",
+        "labelLastNameMsgSpecialChar": "Client last name <strong>cannot</strong> begin with a special character or number",
+        "labelDOB": "Date of Birth",
+        "labelExternalID": "Citizen ID",
+        "labelMobile": "Mobile Phone",
+        "labelGender": "Gend",
+        "checkboxIsStaff": "Is Staff ?",
+        "labelClientType": "ClientType",
+        "labelClientClass": "Client Classification ",
+        "labelClientSubmittedDate": "Client Submitted Date",
+        "labelClientActivatedDate": "Client Activation Date",
+        "checkboxIsActivate": "Activate ?",
+        "checkboxOpenAccount": "Open Current Account ?",
+        "labelSavingProduct": "Saving Product",
+        "labelSavingProductMsg": "Savings product is <strong>required</strong>",
+        "labelCorpID": "Incorporation Number",
+        "labelCorpValidDate": "Incorporation Validity Till Date",
+        "labelCorpMainBiz": "Main Biz Lin",
+        "labelCorpRemark": "Remark",
+        "labelCorpConstitution": "Constitution",
+        "labelCorpDate": "Incorporation Date",
+        "labelTaxNo": "Tax Number"
       }
     },
     "buttonImportClient": "Import Client",
