--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -3,20 +3,64 @@
   "Client_Component": {
     "ClientStepper": {
       "AddressStep": {
-        "Add": "Thêm địa chỉ mới",
-        "Address": "Loại địa chỉ",
-        "AddressLine1": "Số nhà",
-        "AddressLine2": "Số Lô/Block",
-        "AddressLine3": "Chung cư",
-        "City": "Thành phố thuộc Tỉnh",
-        "Country": "Quốc Gia",
-        "Next": "Kế tiếp",
-        "PostalCode": "Mã bưu điện",
-        "Previous": "Quay lại",
-        "StateProvince": "Tỉnh/Thành phố thuộc TW",
-        "Street": "Tên đường",
-        "TownVilage": "Phường/Xã",
-        "isActive": "đã kích hoạt?"
+        "buttonAdd": "Thêm địa chỉ mới",
+        "titleAddress": "ĐỊA CHỈ",
+        "labelAddressLine1": "Số nhà",
+        "labelAddressLine2": "Số Lô/Block",
+        "labelAddressLine3": "Khu dân cư/ Chung cư",
+        "labelCity": "Thành phố thuộc Tỉnh",
+        "labelCountry": "Quốc Gia",
+        "checkboxIsActive": "Kích hoạt ?",
+        "labelPostalCode": "Mã bưu điện",
+        "labelStateProvince": "Tỉnh/Thành phố thuộc TW",
+        "labelStreet": "Tên đường",
+        "labelAddressType": "Loại địa chỉ",
+        "labelDistrict": "Quận",
+        "labelTownVillage": "Phường/Xã"
+      },
+      "labelGeneral": "Thông tin chung",
+      "labelAddress": "Địa chỉ",
+      "labelRelative": "Người liên quan",
+      "labelPreview": "Tóm tắt",
+      "buttonNext": "Kế tiếp",
+      "buttonPrevious": "Quay lại",
+      "GeneralStep": {
+        "labelOffice": "Chi nhánh",
+        "labelOfficeMsg": "<strong> Yêu cầu: </strong>  chọn Chi nhánh",
+        "labelStaff": "Nhân viên quản lý",
+        "labelLegalForm": "Loại hình tổ chức",
+        "labelFullName": "Tên ",
+        "labelFullNameMsg": "<strong> Yêu cầu: </strong> nhập Tên của khách hàng",
+        "labelFullNameMsgSpecialChar": "<strong> Yêu cầu: </strong> Tên của khách hàng không bắt đầu bằng ký tự đặc biệt",
+        "labelFirstName": "Họ",
+        "labelFirstNameMsg": "<strong> Yêu cầu: </strong> nhập Họ của khách hàng",
+        "labelFirstNameMsgSpecialChar": "<strong> Yêu cầu: </strong> Họ của khách hàng không bắt đầu bằng ký tự đặc biệt",
+        "labelMidName": "Tên Lót",
+        "labelLastName": "Tên",
+        "labelMidNameMsg": "<strong> Yêu cầu: </strong> nhập Tên Lót của khách hàng",
+        "labelMidNameMsgSpecialChar": "<strong> Yêu cầu: </strong> Tên Lót của khách hàng không bắt đầu bằng ký tự đặc biệt",
+        "labelLastNameMsg": "<strong> Yêu cầu: </strong> nhập Tên của khách hàng",
+        "labelLastNameMsgSpecialChar": "<strong> Yêu cầu: </strong> Tên của khách hàng không bắt đầu bằng ký tự đặc biệt",
+        "labelDOB": "Ngày sinh",
+        "labelExternalID": "CMND/CCCD",
+        "labelMobile": "Điện thoại di động",
+        "labelGender": "Giới tính",
+        "checkboxIsStaff": "Nhân viên nội bộ ?",
+        "labelClientType": "Loại Khách hàng",
+        "labelClientClass": "Phân loại khách hàng",
+        "labelClientSubmittedDate": "Ngày mở thông tin",
+        "labelClientActivatedDate": "Ngày kích hoạt",
+        "checkboxIsActivate": "Kích hoạt ?",
+        "checkboxOpenAccount": "Mở Tài khoản ?",
+        "labelSavingProduct": "Loại tài khoản",
+        "labelSavingProductMsg": "<strong> Yêu cầu: </strong> chọn Loại tài khoản",
+        "labelCorpID": "Mã số doanh nghiệp",
+        "labelCorpValidDate": "Ngày hết hiệu lực GPKD",
+        "labelCorpMainBiz": "Ngành nghề chính",
+        "labelCorpRemark": "Ghi chú",
+        "labelCorpConstitution": "Loại hình tổ chức",
+        "labelCorpDate": "Ngày thành lập",
+        "labelTaxNo": "Mã số thuế"
       }
     },
     "buttonImportClient": "Nhập list khách hàng",
