Update i18n for client module
Update i18n for client module:
Next:
   - Detail tab for client_module/ViewClient

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -60,7 +60,8 @@
         "labelCorpRemark": "Remark",
         "labelCorpConstitution": "Constitution",
         "labelCorpDate": "Incorporation Date",
-        "labelTaxNo": "Tax Number"
+        "labelTaxNo": "Tax Number",
+        "labelAccountNo": "CIF No"
       },
       "RelativeStep": {
         "lblRelativeMember": "Relative Member",
@@ -99,7 +100,59 @@
     "tblColStaffName": "StaffName",
     "tblColStatus": "Status",
     "tblColMobileNumber": "Mobile Number",
-    "inputPlaceholderClosedCIF": "Search by client name"
+    "inputPlaceholderClosedCIF": "Search by client name",
+    "ViewClient": {
+      "lblViewSignature": "View Signature",
+      "lblClientName": "Client Name",
+      "lblExternalID": "Citizen ID",
+      "lblStaff": "Sta",
+      "lblActivationDate": "Activation Date",
+      "lblMemberOf": "Member of",
+      "lblUnassigned": "Unassigned",
+      "btnEdit": "Edit",
+      "btnAction": "Actions",
+      "btnClose": "Close",
+      "btnTransferClient": "Transfer Client",
+      "btnActivate": "Activate",
+      "btnWithdraw": "Withdraw",
+      "btnReject": "Reject",
+      "btnDelete": "Delêt",
+      "btnUndoRejection": "Undo Rejection",
+      "btnUndoTransfer": "Undo Client Transfer",
+      "btnAcceptTransfer": "Accept Transfer",
+      "btnRejectTransfer": "Reject Transfer",
+      "btnAssignStaff": "Assign Staff",
+      "btnUnAssignStaff": "Unassign Staff",
+      "btnMoreAction": "More Actions",
+      "btnAddCharge": "Add Charges",
+      "btnSurvey": "Survey",
+      "btnUpdateDefaultSaving": "Update Default Saving",
+      "btnUploadSignature": "Upload Signature",
+      "btnDeleteSignature": "Delete Signature",
+      "btnClientReport": "Client Screen Report",
+      "btnCreateStandingIns": "Create Standing Instruction",
+      "btnViewStandingIns": "View Standing Instruction",
+      "btnCreateSelfService": "Create Self Service User",
+      "lblAddress": "Address",
+      "lblGeneral": "General",
+      "lblFamilyMember": "Relative",
+      "lblDocument": "Documents",
+      "lblNote": "Note",
+      "lblIdentity": "Indentities",
+      "lblNotActivated": "Not Activated",
+      "btnNewLoan": "New Loan Account",
+      "btnNewShareAccount": "New Share Account",
+      "btnNewFixedDeposit": "New Fixed Deposit Account",
+      "btnNewRecurringDeposit": "New Recurring Deposit Account",
+      "btnNewSaving": "New Saving Account",
+      "btnReactivate": "Reactivate",
+      "lblCifNo": "CIF #",
+      "btnApplication": "Applications",
+      "lblExtendInfo": "Additional informations",
+      "tipUploadImage": "Upload Image",
+      "tipCaptureImage": "Capture Image",
+      "tipDeleteImage": "Delete Image"
+    }
   },
   "Footer_Component": {
     "Version": "Version",
