--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -60,7 +60,8 @@
         "labelCorpRemark": "Ghi chú",
         "labelCorpConstitution": "Loại hình tổ chức",
         "labelCorpDate": "Ngày thành lập",
-        "labelTaxNo": "Mã số thuế"
+        "labelTaxNo": "Mã số thuế",
+        "labelAccountNo": "Mã CIF"
       },
       "RelativeStep": {
         "lblRelativeMember": "Người có liên quan",
@@ -99,7 +100,59 @@
     "tblColStaffName": "Nhân viên phụ trách",
     "tblColStatus": "Trạng thái",
     "tblColMobileNumber": "Di động",
-    "inputPlaceholderClosedCIF": "Tìm bằng tên khách hàng"
+    "inputPlaceholderClosedCIF": "Tìm bằng tên khách hàng",
+    "ViewClient": {
+      "lblViewSignature": "Xem chữ kí",
+      "lblClientName": "Tên khách hàng",
+      "lblExternalID": "CMND/CCCD",
+      "lblStaff": "Nhân viên",
+      "lblActivationDate": "Ngày kích hoạt",
+      "lblMemberOf": "Là thành viên của Đại lý",
+      "lblUnassigned": "Chưa có nhân viên phụ trách",
+      "btnEdit": "Sửa thông tin",
+      "btnAction": "Hành động",
+      "btnClose": "Đóng mã CIF",
+      "btnTransferClient": "Chuyển khách hàng",
+      "btnActivate": "Kích hoạt khách hàng",
+      "btnWithdraw": "Rút tiền",
+      "btnReject": "Từ chối mở CIF",
+      "btnDelete": "Xóa CIF",
+      "btnUndoRejection": "Hoàn từ chối CIF",
+      "btnUndoTransfer": "Hoàn chuyển khách hàng",
+      "btnAcceptTransfer": "Nhận khách hàng chuyển đến",
+      "btnRejectTransfer": "Từ chối nhận khách hàng",
+      "btnAssignStaff": "Thêm Nhân viên phụ trách",
+      "btnUnAssignStaff": "Bỏ nhân viên phụ trách",
+      "btnMoreAction": "Hành động khác",
+      "btnAddCharge": "Áp dụng phí cho khách hàng",
+      "btnSurvey": "Gửi khảo sát",
+      "btnUpdateDefaultSaving": "Cập nhật tài khoản mặc định",
+      "btnUploadSignature": "Cập nhật chữ kí mẫu",
+      "btnDeleteSignature": "Xóa chữ ký mẫu",
+      "btnClientReport": "Xem báo cáo khách hàng",
+      "btnCreateStandingIns": "Tạo Chỉ định thu",
+      "btnViewStandingIns": "Quản lý chỉ định thu",
+      "btnCreateSelfService": "Tạo User dùng app mobile",
+      "lblAddress": "Địa chỉ",
+      "lblGeneral": "Thông tin chung",
+      "lblFamilyMember": "Người liên quan",
+      "lblDocument": "Hồ sơ khách hàng",
+      "lblNote": "Ghi chú",
+      "lblIdentity": "Thông tin thẻ/CMND/CCCD",
+      "lblNotActivated": "Chưa kích hoạt",
+      "btnNewLoan": "Mở khoản vay",
+      "btnNewShareAccount": "Mở tài khoản chứng khoán",
+      "btnNewFixedDeposit": "Mở tiết kiệm cố định",
+      "btnNewRecurringDeposit": "Mở Tiết kiệm Tái tục",
+      "btnNewSaving": "Mở Tài khoản",
+      "btnReactivate": "Tái kích hoạt khách hàng",
+      "lblCifNo": "Mã CIF",
+      "btnApplication": "Mở tài khoản",
+      "lblExtendInfo": "Thông tin bổ sung",
+      "tipUploadImage": "Tải hình lên",
+      "tipCaptureImage": "Chụp hình ",
+      "tipDeleteImage": "Xóa hình"
+    }
   },
   "Footer_Component": {
     "Version": "Phiên bản",
